# data-challenge-ram-main

./: Makefile  README.md  data-file.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: 2023-10-20.csv  2023-10-21.csv  2023-10-22.csv  2023-10-23.csv  2023-10-24.csv  2023-10-25.csv  2023-10-26.csv
data_extractor/: main.py
data_extractor/tests/: test_main.py
scripts/: generate_data.py
