[tool.poetry]
name = "data-platform"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^19.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
